--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <h1>Welcome to my first ever made website</h1>
     <h2> Check out my youtube and other stuff at https://bio.link/vxry</h2>
     <h2> Please and thank you.</h2>
-    <a href="./about.html"><h2>Click here to lean about me </h2></a>
+    <a href="./about.html"><h2>Click here to learn about me </h2></a>
     
 
     <meta charset="UTF-8">
