--- a/about.html
+++ b/about.html
@@ -10,8 +10,37 @@
  <body></body>
       <div class="container"></div>
         <h1> ABOUT ME</h1>
-         <p>Hi, my name is vxry known as sclrxd if you need to know more about me feel free to visit https://bio.link/vxry <meta charset="UTF-8">
+         <p>Hi, my name is vxry known as sclrxd if you need to know more about me feel free to visit https://bio.link/vxry<meta charset="UTF-8">
         <a href="./index.html"><hz>Click here to return to the main padge!</hz></a>
-</div>
+        <a href="./index.html"></a>https://bio.link/vxry
+</p><div></div>
+
 </body>
     </html>
+
+
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Awesome Website</title>
+    <style>
+        /* Add your custom CSS styles here */
+        .credits {
+            text-align: center;
+            font-size: 12px;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+    <!-- Your website content goes here -->
+
+    <!-- Credits section -->
+    <div class="credits">
+        <p>Website designed by <a href="https://discordapp.com/users/818219261008281630" target="_blank">Rorx</a></p>
+    </div>
+</body>
+
