--- a/about.html
+++ b/about.html
@@ -43,4 +43,17 @@
         <p>Website designed by <a href="https://discordapp.com/users/818219261008281630" target="_blank">Rorx</a></p>
     </div>
 </body>
+</head>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Rain Animation</title>
+<link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file -->
+</head>
+<body>
+<div class="rain"></div> <!-- This div will have the rain effect -->
+</body>
+</html>
