--- a/index.html
+++ b/index.html
@@ -96,3 +96,18 @@ function changeBackgroundColor() {
 
 </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Rain Animation</title>
+<link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file -->
+</head>
+<body>
+<div class="rain"></div> <!-- This div will have the rain effect -->
+</body>
+</html>
