--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@ function changeBackgroundColor() {
   .youtube { background-color: #FF0000; }
   .instagram { background-color: #C13584; }
   .tiktok { background-color: #000000; }
+  .bio.link { background-color: aqua;}
 </style>
+</head>
 </head>
 <body>
 
@@ -93,21 +95,8 @@ function changeBackgroundColor() {
 
 <!-- TikTok Button -->
 <a href="https://www.tiktok.com/@vxry_codm" class="social-btn tiktok" target="_blank">TikTok</a>
-
+<!-- bio link-->
+<a href="https://bio.link/vxry" class="social-btn bio link" target="_blank">Biolink</a>
 </body>
 </html>
 
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rain Animation</title>
-<link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file -->
-</head>
-<body>
-<div class="rain"></div> <!-- This div will have the rain effect -->
-</body>
-</html>
