--- a/about.html
+++ b/about.html
@@ -10,9 +10,10 @@
  <body></body>
       <div class="container"></div>
         <h1> ABOUT ME</h1>
-         <p>Hi, my name is vxry known as sclrxd if you need to know more about me feel free to visit https://bio.link/vxry<meta charset="UTF-8">
+         <p>Hi, my name is vxry known as sclrxd if you need to know more about me feel free to visit  <!-- Discord Button -->
+            <a href="https://discord.gg/w2XmJgHwrt" class="social-btn discord" target="_blank">Discord</a><meta charset="UTF-8">
         <a href="./index.html"><hz>Click here to return to the main padge!</hz></a>
-        <a href="./index.html"></a>https://bio.link/vxry
+
 </p><div></div>
 
 </body>
@@ -31,7 +32,7 @@
         .credits {
             text-align: center;
             font-size: 12px;
-            color: #000000;
+            color: rgb(132, 0, 255);
         }
     </style>
 </head>
@@ -41,7 +42,8 @@
     <!-- Credits section -->
     <div class="credits">
         <p>Website designed by <a href="https://discordapp.com/users/818219261008281630" target="_blank">Rorx</a></p>
-    </div>
+        <p> Thank you to the dev of this website.</p>
+</div>
 </body>
 </head>
 
